--- a/clientmanage/templates/clientmanage/confirm_send_email.html
+++ b/clientmanage/templates/clientmanage/confirm_send_email.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+    {% load static %}
     <title>Confirm Email Sending</title>
+    <link rel="icon" href="{% static 'cm1.ico' %}" type="image/x-icon">
 </head>
 <body>
     <h2>Are you sure you want to send the email to ...</h2>
