--- a/clientmanage/templates/clientmanage/client_form.html
+++ b/clientmanage/templates/clientmanage/client_form.html
@@ -1,6 +1,8 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    {% load static %}
     <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,6 +13,7 @@
             max-width: 700px; /* Wider input field */
         }
     </style>
+    <link rel="icon" href="{% static 'cm1.ico' %}" type="image/x-icon">
 </head>
 <body class="bg-light">
     <div class="container mt-5">
