--- a/clientmanage/templates/clientmanage/client_list.html
+++ b/clientmanage/templates/clientmanage/client_list.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  {% load static %}
     <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Client List</title>
+    <link rel="icon" href="{% static 'cm1.ico' %}" type="image/x-icon">
 </head>
 <body>
     <h1>Client List</h1>
