--- a/clientmanage/templates/clientmanage/content2026.html
+++ b/clientmanage/templates/clientmanage/content2026.html
@@ -36,7 +36,7 @@
         .content {
             font-size: 16px;
             line-height: 1.5;
-            color: #555555;
+            color: #333333;
             /* font-family: Arial, sans-serif; */
             font-family: '游明朝', 'Yu Mincho', 'MS Mincho', serif;
         }
@@ -63,10 +63,10 @@
     <table width="100%" cellpadding="0" cellspacing="0" bgcolor="#f4f4f4">
         <tr>
             <td align="center">
-                <table class="container" cellpadding="0" cellspacing="0" style="background-color: #ffffff; border: 3px solid #f8e4c6; padding: 20px;">
+                <table class="container" cellpadding="0" cellspacing="0" style="background-color: #ffffff; border: 3px solid #F5F0E6; padding: 20px;">
                     <!-- Header with Image -->
                     <tr>
-                        <td align="center" style="background-color: #f8e4c6; padding: 10px;">
+                        <td align="center" style="background-color: #F5F0E6; padding: 10px;">
                           <img src="https://soliton-cm.com/newyear/2026ny.jpg" alt="Download Image" style="max-width:100%; height:auto;">
                         </td>
                     </tr>
@@ -74,8 +74,9 @@
                     <tr>
                         <td class="responsive-padding">
                             <div class="content">
-                                <h3 style="color: #345C72;">{{ cName }} <br>{{ sirName }} 様</h3>
-                                <h3 style="color: #345C72;">新年あけましておめでとうございます。<br>旧年中はひとかたならぬご厚情を賜り、心より御礼申し上げます。</h3>
+                                <h3 style="color: #1A3C5A;">{{ cName }} <br>{{ sirName }} 様</h3>
+                                <h3 style="color: #1A3C5A;">新年あけましておめでとうございます。</h3>
+                                <p>旧年中はひとかたならぬご厚情を賜り、心より御礼申し上げます。</p>
                                 <p>おかげさまで弊社は6期目を迎え、ゆっくりではございますが着実に前へと歩みを進めております。</p>
                                 
                                 <p>本年も皆様のお役に立てるよう一層精進してまいりますので、</p>
@@ -93,9 +94,9 @@
                     </tr>
                     <!-- Footer -->
                     <tr>
-                        <td align="center" style="background-color: #3b2401; color:#fde9cc; padding: 10px; font-size: 12px; font-weight: 600;">
+                        <td align="center" style="background-color: #1E2A44 ; color:#E8D7B8; padding: 10px; font-size: 12px; font-weight: 600;">
                             &copy; 2026 Soliton Capital Management Inc. | 
-                            <a href="https://soliton-cm.com" style="color: #fde9cc;">soliton-cm.com</a>
+                            <a href="https://soliton-cm.com" style="color: #E8D7B8;">soliton-cm.com</a>
                         </td>
                     </tr>
                 </table>
